--- a/src/lib/templates/v2/templates/4-column-portrait.yaml
+++ b/src/lib/templates/v2/templates/4-column-portrait.yaml
@@ -1,29 +1,29 @@
-id: classic-cards-v2-landscape
+id: 4-column-portrait
 version: "2.0.0"
-name: Classic Cards V2 Landscape
+name: 4 column (portrait)
 
 page:
-  size: A4_LANDSCAPE
+  size: A4_PORTRAIT
   margins:
-    top: 20
-    right: 28
-    bottom: 20
-    left: 28
+    top: 22.68    # ~8mm in points (reduced by 60%)
+    right: 25.51  # ~9mm (reduced by 40%)
+    bottom: 22.68
+    left: 25.51
 
 regions:
   header:
-    height: 50
+    height: 60
   title:
-    height: 28
+    height: 32
   footer:
-    height: 36
+    height: 45
 
 body:
   container:
     type: GRID
     cols: 4
-    rowHeight: 65
-    gapX: 10
+    rowHeight: 70      # Base row height - ITEM_TEXT_ROW fits in 1 row
+    gapX: 8
     gapY: 8
 
 tiles:
@@ -33,10 +33,10 @@ tiles:
       nameLines: 0
       descLines: 0
       indicatorAreaHeight: 0
-      imageBoxHeight: 40
+      imageBoxHeight: 50
       paddingTop: 5
       paddingBottom: 5
-      totalHeight: 50
+      totalHeight: 60
 
   TITLE:
     region: title
@@ -47,26 +47,29 @@ tiles:
       imageBoxHeight: 0
       paddingTop: 4
       paddingBottom: 4
-      totalHeight: 28
+      totalHeight: 32
 
   SECTION_HEADER:
     region: body
     colSpan: 4
     style:
       typography:
-        fontSet: "elegant-serif"
-        fontSize: "xl"
-        fontWeight: "semibold"
+        fontSet: "system-sans-bold"
+        fontSize: "5xl"
+        fontWeight: "bold"
         textAlign: "left"
         lineHeight: "normal"
-        textTransform: "uppercase"
+        letterSpacing: 0.8
+        textTransform: "capitalize"
         color: "#696969"
+        decoration: "bullet"
+        decorationColor: "#D4AF37"
       spacing:
         paddingLeft: 8
-        paddingTop: 0
+        paddingTop: 24
         paddingBottom: 0
       border:
-        width: 3
+        width: 0.6
         color: "#D4AF37"
         style: "solid"
         sides: ["bottom"]
@@ -75,22 +78,31 @@ tiles:
       descLines: 0
       indicatorAreaHeight: 0
       imageBoxHeight: 0
-      paddingTop: 6
+      paddingTop: 8
       paddingBottom: 4
-      totalHeight: 22
+      totalHeight: 24
 
-  # ITEM_CARD uses rowSpan: 2 for landscape layout
+  # DESIGN DECISION (Issue #5): ITEM_CARD uses rowSpan: 2, ITEM_TEXT_ROW uses rowSpan: 1
+  # 
+  # The grid rowHeight is 70pt (matching ITEM_TEXT_ROW).
+  # ITEM_CARD needs ~140pt total, so it spans 2 rows.
   # Height formula: rowSpan * rowHeight + (rowSpan - 1) * gapY
-  #   = 2 * 65 + 1 * 8 = 138pt actual height
+  #   = 2 * 70 + 1 * 8 = 148pt actual height
+  # 
+  # This keeps the grid math clean:
+  #   - Text-only mode: all items use 1 row (70pt)
+  #   - Card mode: all items use 2 rows (148pt with gap)
+  #   - No sparse layouts or wasted space
   ITEM_CARD:
     region: body
     rowSpan: 2
     style:
       typography:
         name:
-          fontSet: "elegant-serif"
+          fontSet: "system-sans"
           fontSize: "xsm"
           fontWeight: "bold"
+          textTransform: "capitalize"
         description:
           fontSet: "modern-sans"
           fontSize: "xxs"
@@ -103,10 +115,10 @@ tiles:
       nameLines: 2
       descLines: 2
       indicatorAreaHeight: 16
-      imageBoxHeight: 60
+      imageBoxHeight: 70
       paddingTop: 8
       paddingBottom: 8
-      totalHeight: 138
+      totalHeight: 148
 
   ITEM_TEXT_ROW:
     region: body
@@ -114,9 +126,10 @@ tiles:
     style:
       typography:
         name:
-          fontSet: "elegant-serif"
+          fontSet: "system-sans"
           fontSize: "xsm"
           fontWeight: "bold"
+          textTransform: "capitalize"
         description:
           fontSet: "modern-sans"
           fontSize: "xxs"
@@ -132,7 +145,37 @@ tiles:
       imageBoxHeight: 0
       paddingTop: 8
       paddingBottom: 8
-      totalHeight: 65
+      totalHeight: 70
+
+  # FEATURE_CARD: multi-cell tile for featured menu items
+  # Spans 2 columns and 3 rows for visual prominence.
+  # Height formula: 3 * 70 + 2 * 8 = 226pt
+  FEATURE_CARD:
+    region: body
+    colSpan: 2
+    rowSpan: 3
+    style:
+      typography:
+        name:
+          fontSet: "elegant-serif"
+          fontSize: "sm"
+          fontWeight: "bold"
+        description:
+          fontSet: "modern-sans"
+          fontSize: "xsm"
+          fontWeight: "normal"
+        price:
+          fontSet: "modern-sans"
+          fontSize: "sm"
+          fontWeight: "bold"
+    contentBudget:
+      nameLines: 2
+      descLines: 3
+      indicatorAreaHeight: 20
+      imageBoxHeight: 100
+      paddingTop: 10
+      paddingBottom: 10
+      totalHeight: 226
 
   FOOTER_INFO:
     region: footer
@@ -154,13 +197,34 @@ tiles:
       imageBoxHeight: 0
       paddingTop: 4
       paddingBottom: 4
-      totalHeight: 36
+      totalHeight: 45
+
+  # DECORATIVE_DIVIDER: full-width divider between sections
+  # Height formula: 1 * 70 + 0 * 8 = 70pt
+  DECORATIVE_DIVIDER:
+    region: body
+    colSpan: 4
+    rowSpan: 1
+    contentBudget:
+      nameLines: 0
+      descLines: 0
+      indicatorAreaHeight: 0
+      imageBoxHeight: 0
+      paddingTop: 4
+      paddingBottom: 4
+      totalHeight: 70
+
+dividers:
+  enabled: false
+  style: ornament
+  height: 24
 
 policies:
   lastRowBalancing: CENTER
   showLogoOnPages: [FIRST, CONTINUATION, FINAL, SINGLE]
   repeatSectionHeaderOnContinuation: true
   sectionHeaderKeepWithNextItems: 1
+  maxFeaturedPerSection: 1
 
 filler:
   enabled: false
@@ -170,13 +234,9 @@ filler:
       startCol: 0
       endCol: 3
   tiles:
-    - id: filler-icon-1
-      style: icon
-      content: utensils
-      rowSpan: 2
-    - id: filler-icon-2
-      style: icon
-      content: coffee
+    - id: filler-blank
+      style: color
+      content: ''
       rowSpan: 2
   policy: SEQUENTIAL
 
