--- a/src/lib/templates/v2/templates/3-column-portrait.yaml
+++ b/src/lib/templates/v2/templates/3-column-portrait.yaml
@@ -1,30 +1,30 @@
-id: italian-v2
+id: 3-column-portrait
 version: "2.0.0"
-name: Italian Classic V2
+name: 3 column (portrait)
 
 page:
   size: A4_PORTRAIT
   margins:
-    top: 36
-    right: 36
-    bottom: 36
-    left: 36
+    top: 22.68
+    right: 25.51
+    bottom: 22.68
+    left: 25.51
 
 regions:
   header:
-    height: 70
+    height: 60
   title:
     height: 32
   footer:
-    height: 32
+    height: 45
 
 body:
   container:
     type: GRID
-    cols: 2
-    rowHeight: 82      # Reduced from 90 to allow 3 rows of items (6 total) per page
-    gapX: 20
-    gapY: 10
+    cols: 3
+    rowHeight: 70
+    gapX: 10
+    gapY: 8
 
 tiles:
   LOGO:
@@ -34,9 +34,9 @@ tiles:
       descLines: 0
       indicatorAreaHeight: 0
       imageBoxHeight: 50
-      paddingTop: 10
-      paddingBottom: 10
-      totalHeight: 70
+      paddingTop: 5
+      paddingBottom: 5
+      totalHeight: 60
 
   TITLE:
     region: title
@@ -45,103 +45,111 @@ tiles:
       descLines: 0
       indicatorAreaHeight: 0
       imageBoxHeight: 0
-      paddingTop: 8
-      paddingBottom: 8
+      paddingTop: 4
+      paddingBottom: 4
       totalHeight: 32
 
   SECTION_HEADER:
     region: body
-    colSpan: 2
+    colSpan: 3
     style:
       typography:
-        fontSet: "elegant-serif"
-        fontSize: "xl"
-        fontWeight: "semibold"
-        textAlign: "center"
+        fontSet: "system-sans-bold"
+        fontSize: "5xl"
+        fontWeight: "bold"
+        textAlign: "left"
         lineHeight: "normal"
-        textTransform: "uppercase"
-        color: "#3E2C1C"
+        letterSpacing: 0.8
+        textTransform: "capitalize"
+        color: "#696969"
+        decoration: "bullet"
+        decorationColor: "#D4AF37"
       spacing:
-        paddingLeft: 0
-        paddingTop: 4
-        paddingBottom: 4
+        paddingLeft: 8
+        paddingTop: 24
+        paddingBottom: 0
       border:
-        width: 1
-        color: "#C9BAA3"
+        width: 0.6
+        color: "#D4AF37"
         style: "solid"
-        sides: ["top", "bottom"]
+        sides: ["bottom"]
     contentBudget:
       nameLines: 1
       descLines: 0
       indicatorAreaHeight: 0
       imageBoxHeight: 0
-      paddingTop: 12
-      paddingBottom: 6
-      totalHeight: 32
+      paddingTop: 8
+      paddingBottom: 4
+      totalHeight: 24
 
+  # ITEM_CARD uses rowSpan: 2 for three-column grid
+  # Height formula: rowSpan * rowHeight + (rowSpan - 1) * gapY
+  #   = 2 * 70 + 1 * 8 = 148pt actual height
   ITEM_CARD:
     region: body
-    rowSpan: 2         # 2 rows = 174pt (2x82 + 10 gap)
+    rowSpan: 2
     style:
       typography:
         name:
-          fontSet: "elegant-serif"
+          fontSet: "system-sans"
           fontSize: "xsm"
           fontWeight: "bold"
+          textTransform: "capitalize"
         description:
-          fontSet: "friendly-rounded"
+          fontSet: "modern-sans"
           fontSize: "xxs"
           fontWeight: "normal"
         price:
-          fontSet: "friendly-rounded"
-          fontSize: "xs"
-          fontWeight: "bold"
-    contentBudget:
-      nameLines: 2
-      descLines: 2     # Reduced from 3 to ensure comfortable fit in 174pt
-      indicatorAreaHeight: 18
-      imageBoxHeight: 75 # Reduced from 80
-      paddingTop: 8
-      paddingBottom: 8
-      totalHeight: 174
-
-  ITEM_TEXT_ROW:
-    region: body
-    rowSpan: 1         # Single row = 82pt
-    style:
-      typography:
-        name:
-          fontSet: "elegant-serif"
-          fontSize: "xsm"
-          fontWeight: "bold"
-        description:
-          fontSet: "friendly-rounded"
-          fontSize: "xxs"
-          fontWeight: "normal"
-        price:
-          fontSet: "friendly-rounded"
+          fontSet: "modern-sans"
           fontSize: "xs"
           fontWeight: "bold"
     contentBudget:
       nameLines: 2
       descLines: 2
-      indicatorAreaHeight: 18
+      indicatorAreaHeight: 16
+      imageBoxHeight: 60
+      paddingTop: 8
+      paddingBottom: 8
+      totalHeight: 148
+
+  ITEM_TEXT_ROW:
+    region: body
+    rowSpan: 1
+    style:
+      typography:
+        name:
+          fontSet: "system-sans"
+          fontSize: "xsm"
+          fontWeight: "bold"
+          textTransform: "capitalize"
+        description:
+          fontSet: "modern-sans"
+          fontSize: "xxs"
+          fontWeight: "normal"
+        price:
+          fontSet: "modern-sans"
+          fontSize: "xs"
+          fontWeight: "bold"
+    contentBudget:
+      nameLines: 2
+      descLines: 2
+      indicatorAreaHeight: 16
       imageBoxHeight: 0
       paddingTop: 8
       paddingBottom: 8
-      totalHeight: 82
+      totalHeight: 70
 
   FOOTER_INFO:
     region: footer
     style:
       typography:
         contact:
-          fontSet: "friendly-rounded"
+          fontSet: "modern-sans"
           fontSize: "xs"
           fontWeight: "normal"
       border:
         width: 1
-        color: "#C9BAA3"
+        color: "#D1D5DB"
         style: "solid"
         sides: ["top"]
     contentBudget:
@@ -151,18 +159,26 @@ tiles:
       imageBoxHeight: 0
       paddingTop: 4
       paddingBottom: 4
-      totalHeight: 32
+      totalHeight: 45
 
 policies:
-  lastRowBalancing: LEFT
+  lastRowBalancing: CENTER
   showLogoOnPages: [FIRST, CONTINUATION, FINAL, SINGLE]
   repeatSectionHeaderOnContinuation: true
   sectionHeaderKeepWithNextItems: 1
 
 filler:
   enabled: false
-  safeZones: []
-  tiles: []
+  safeZones:
+    - startRow: 0
+      endRow: LAST_CONTENT
+      startCol: 0
+      endCol: 2
+  tiles:
+    - id: filler-blank
+      style: color
+      content: ''
+      rowSpan: 2
   policy: SEQUENTIAL
 
 itemIndicators:
