feat(pdf-rendering): Refactor CSS injection for PDF textures to support all CSS properties, enhance gradient handling in vignette overlays, and implement base64 encoding for SVG data URIs to improve PDF export reliability.

--- a/src/lib/templates/v2/templates/1-column-tall.yaml
+++ b/src/lib/templates/v2/templates/1-column-tall.yaml
@@ -55,14 +55,14 @@ tiles:
     style:
       typography:
         fontSet: "system-sans-bold"
-        fontSize: "3xl"
+        fontSize: "2xl"
         fontWeight: "bold"
-        textAlign: "left"
+        textAlign: "center"
         lineHeight: "normal"
         letterSpacing: 0.8
         textTransform: "capitalize"
         color: "#696969"
-        decoration: "bullet"
+        decoration: "none"
         decorationColor: "#D4AF37"
       spacing:
         paddingLeft: 8
