--- a/src/lib/templates/v2/templates/3-column-portrait.yaml
+++ b/src/lib/templates/v2/templates/3-column-portrait.yaml
@@ -16,7 +16,7 @@ regions:
   title:
     height: 32
   footer:
-    height: 45
+    height: 38
 
 body:
   container:
@@ -145,7 +145,7 @@ tiles:
       typography:
         contact:
           fontSet: "modern-sans"
-          fontSize: "xs"
+          fontSize: "xss"
           fontWeight: "normal"
       border:
         width: 1
@@ -158,8 +158,8 @@ tiles:
       indicatorAreaHeight: 0
       imageBoxHeight: 0
       paddingTop: 4
-      paddingBottom: 4
-      totalHeight: 45
+      paddingBottom: 0
+      totalHeight: 38
 
 policies:
   lastRowBalancing: CENTER
