--- a/src/lib/templates/v2/templates/4-column-landscape.yaml
+++ b/src/lib/templates/v2/templates/4-column-landscape.yaml
@@ -97,15 +97,16 @@ tiles:
           textTransform: "capitalize"
         description:
           fontSet: "modern-sans"
-          fontSize: "xxs"
+          fontSize: "xxxs"
           fontWeight: "normal"
+          lineHeight: "normal"
         price:
           fontSet: "modern-sans"
           fontSize: "xs"
           fontWeight: "bold"
     contentBudget:
       nameLines: 2
-      descLines: 2
+      descLines: 3
       indicatorAreaHeight: 16
       imageBoxHeight: 60
       paddingTop: 6
@@ -124,15 +125,16 @@ tiles:
           textTransform: "capitalize"
         description:
           fontSet: "modern-sans"
-          fontSize: "xxs"
+          fontSize: "xxxs"
           fontWeight: "normal"
+          lineHeight: "normal"
         price:
           fontSet: "modern-sans"
           fontSize: "xs"
           fontWeight: "bold"
     contentBudget:
       nameLines: 2
-      descLines: 2
+      descLines: 3
       indicatorAreaHeight: 16
       imageBoxHeight: 0
       paddingTop: 6
